# wassm

./: Cargo.toml  LICENSE  README.md  faster.config
monolithic/: Cargo.toml  rocksdb.config
monolithic/src/: config.rs  lib.rs  tools.rs
monolithic/src/queries/nexmark/: mod.rs  q5_managed.rs  q5_managed_index.rs  q6_managed.rs  q7_managed.rs  q8_managed.rs  q8_managed_map.rs
monolithic/src/queries/windows/global/: window_2_faster_rank.rs
src/: event.rs  main.rs
src/queries/: mod.rs
src/queries/nexmark/: q3_managed.rs  q4.rs  q4_managed.rs  q4_q6_common_managed.rs
src/queries/windows/: mod.rs
src/queries/windows/global/: mod.rs  window_2_faster_count.rs  window_2_faster_rank.rs  window_2a_rocksdb_count.rs  window_2a_rocksdb_rank.rs  window_2b_rocksdb_count.rs  window_2b_rocksdb_rank.rs
workload_aware/: Cargo.toml  README.md
workload_aware/src/: config.rs  event.rs  main.rs
workload_aware/src/queries/: mod.rs  q3.rs  q4.rs  q4_flex.rs  q4_q6_common.rs  q5.rs  q5_index.rs  q6.rs  q7.rs  q8.rs
