[package]
name = "nexmark"
version = "0.1.0"

[dependencies]
abomonation = "^0.7"
abomonation_derive = "0.3"
clap = "*"
hdrhist = "0.5.0"
rand = "0.6"
serde = "*"
serde_derive = "*"
serde_json = "*"
streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
tempfile = "*"
timely = { git = "https://github.com/matthewbrookes/timely-dataflow.git" }

[dependencies.faster-rs]
version = "0.8"
git = "https://github.com/matthewbrookes/faster-rs"
branch = "nexmark"
